--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@itcode-dev/react-components-library-starter",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/itcode-dev/react-components-library-starter",
@@ -21,6 +21,7 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.7",
     "@storybook/testing-library": "^0.0.11",
+    "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.12",
     "babel-loader": "^8.2.5",
     "postcss": "^8.4.14",
@@ -33,7 +34,8 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "classnames": "^2.3.1"
+    "classnames": "^2.3.1",
+    "style-inject": "^0.3.0"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
