--- a/package.json
+++ b/package.json
@@ -23,7 +23,19 @@
     "@storybook/testing-library": "^0.0.11",
     "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "babel-loader": "^8.2.5",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
+    "eslint-plugin-storybook": "^0.5.12",
     "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -34,6 +46,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "style-inject": "^0.3.0"
   },
   "scripts": {
@@ -41,7 +54,5 @@
     "build-storybook": "build-storybook",
     "build": "rollup -c"
   },
-  "peerDependencies": {
-    "classnames": "^2.3.1"
-  }
+  "peerDependencies": {}
 }
