--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@storybook/addon-interactions": "^6.5.7",
     "@storybook/addon-links": "^6.5.7",
     "@storybook/builder-webpack4": "^6.5.7",
+    "@storybook/builder-webpack5": "^6.5.7",
     "@storybook/manager-webpack4": "^6.5.7",
+    "@storybook/manager-webpack5": "^6.5.7",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.7",
     "@storybook/testing-library": "^0.0.11",
@@ -26,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -36,13 +39,15 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-storybook": "^0.5.12",
-    "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "rollup": "^2.75.5",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "storybook-addon-sass-postcss": "^0.1.3",
+    "sass": "^1.52.2",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
     "typescript": "^4.7.3"
   },
   "dependencies": {
