--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@itcode-dev/react-components-library-starter",
-  "version": "2.0.5",
+  "version": "2.0.7",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/itcode-dev/react-components-library-starter",
@@ -16,9 +16,7 @@
     "@storybook/addon-essentials": "^6.5.7",
     "@storybook/addon-interactions": "^6.5.7",
     "@storybook/addon-links": "^6.5.7",
-    "@storybook/builder-webpack4": "^6.5.7",
     "@storybook/builder-webpack5": "^6.5.7",
-    "@storybook/manager-webpack4": "^6.5.7",
     "@storybook/manager-webpack5": "^6.5.7",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.7",
@@ -39,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-storybook": "^0.5.12",
+    "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
@@ -47,6 +46,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.52.2",
     "sass-loader": "^13.0.0",
+    "shx": "^0.3.4",
     "style-loader": "^3.3.1",
     "typescript": "^4.7.3"
   },
@@ -57,6 +57,7 @@
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
+    "prebuild": "shx rm -rf ./dist",
     "build": "rollup -c"
   },
   "peerDependencies": {}
