--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@itcode-dev/react-components-library-starter",
-  "version": "2.0.9",
+  "version": "2.0.10",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/itcode-dev/react-components-library-starter",
@@ -9,6 +9,7 @@
   "private": false,
   "devDependencies": {
     "@babel/core": "^7.18.2",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
@@ -23,6 +24,7 @@
     "@storybook/testing-library": "^0.0.11",
     "@types/classnames": "^2.3.1",
     "@types/react": "^18.0.12",
+    "@types/react-icons": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "babel-loader": "^8.2.5",
@@ -40,7 +42,6 @@
     "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.4.0",
     "rollup": "^2.75.5",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
@@ -51,8 +52,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "classnames": "^2.3.1",
-    "style-inject": "^0.3.0"
+    "classnames": "^2.3.1"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
@@ -60,5 +60,8 @@
     "prebuild": "shx rm -rf ./dist",
     "build": "rollup -c"
   },
-  "peerDependencies": {}
+  "peerDependencies": {
+    "react-icons": "^4.4.0",
+    "style-inject": "^0.3.0"
+  }
 }
