--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@itcode-dev/react-components-library-starter",
-  "version": "2.0.10",
+  "version": "2.0.11",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/itcode-dev/react-components-library-starter",
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "babel-loader": "^8.2.5",
+    "babel-plugin-react-icons": "^0.1.1",
     "css-loader": "^6.7.1",
     "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -52,7 +53,8 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "classnames": "^2.3.1"
+    "classnames": "^2.3.1",
+    "react-icons": "^4.4.0"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
@@ -61,7 +63,6 @@
     "build": "rollup -c"
   },
   "peerDependencies": {
-    "react-icons": "^4.4.0",
     "style-inject": "^0.3.0"
   }
 }
