--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@itcode-dev/react-components-library-starter",
-  "version": "2.0.17",
+  "version": "2.0.18",
   "main": "./dist/index.js",
+  "module": "./dist/index.es.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/itcode-dev/react-components-library-starter",
   "author": "RWB0104 <psj2716@gmail.com>",
@@ -61,6 +62,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "prebuild": "shx rm -rf ./dist",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "postbuild": "shx rm -rf ./dist/dist"
   }
 }
