--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@itcode-dev/react-components-library-starter",
-  "version": "3.0.0-alpha",
+  "version": "3.0.1",
   "main": "./dist/index.js",
   "module": "./dist/index.es.js",
   "types": "./dist/index.d.ts",
